Refactor tests and update deprecated usages
- Updated AuthMeInitializationTest to suppress deprecation warnings.
- Modified ClassCollector to use getDeclaredConstructor for instance creation.
- Adjusted ClassesConsistencyTest to suppress deprecation warnings for excluded classes.
- Enhanced ReflectionTestUtils to suppress multiple warnings for generics.
- Changed AuthMeApiTest to return Instant instead of Date for last login time.
- Updated SettingsConsistencyTest to handle enum class retrieval with suppressed warnings.