@@ -82,8 +82,8 @@ public class ClassCollector {
     public <T> List<T> getInstancesOfType(Class<T> parent) {
         return getInstancesOfType(parent, (clz) -> {
            try {
-               return canInstantiate(clz) ? clz.newInstance() : null;
-           } catch (InstantiationException | IllegalAccessException e) {
+               return canInstantiate(clz) ? clz.getDeclaredConstructor().newInstance() : null;
+           } catch (ReflectiveOperationException e) {
                throw new IllegalStateException(e);
            }
         });
